# android_ffmpeg

./: gradlew.bat
app/: build.gradle
app/src/androidTest/java/cc/imorning/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg.cpp
app/src/main/cpp/include/libavcodec/: avcodec.h  xvmc.h
app/src/main/cpp/include/libavutil/: common.h  error.h  ffversion.h
app/src/main/cpp/libmp3lame/: id3tag.c
app/src/main/cpp/player/: mp4_player.cpp  mp4_player.h
app/src/main/java/cc/imorning/ffmpeg/: FFmpegApp.java  MainActivity.kt
app/src/main/java/cc/imorning/ffmpeg/jni/: Jni.java
app/src/main/java/cc/imorning/ffmpeg/lame/: Mp3LameEncoder.java
app/src/main/java/cc/imorning/ffmpeg/player/: BasePlayer.java
app/src/main/java/cc/imorning/ffmpeg/player/audio/mp3/: Mp3Player.java
app/src/main/java/cc/imorning/ffmpeg/player/video/mp4/: Mp4Player.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cc/imorning/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
